--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -7,7 +7,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
-  --markprompt-primaryBorder: #8285f4;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -30,7 +30,7 @@
     --markprompt-input: #ffffff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #ffffff;
-    --markprompt-primaryBorder: #8285f4;
+    --markprompt-primaryMuted: #8285f4;
     --markprompt-secondary: #0e0e0e;
     --markprompt-secondaryForeground: #ffffff;
     --markprompt-primaryHighlight: #ec4899;
@@ -151,8 +151,8 @@
   flex: 1 1 auto;
   align-items: center;
   border-bottom: 1px solid var(--markprompt-border);
-  padding: 0 1rem;
-  gap: 1rem;
+  padding: 0 1rem 0 0.75rem;
+  gap: 0.75rem;
 }
 
 :where(.MarkpromptPromptLabel) {
@@ -832,7 +832,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   display: block;
   box-sizing: border-box;
   border-radius: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   background-color: var(--markprompt-muted);
   font-size: var(--markprompt-text-size);
   display: flex;
@@ -896,7 +896,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 :where(.MarkpromptSearchResultIndented) {
-  margin-left: 1.25rem;
+  margin-left: 1.75rem;
   padding-left: 1rem;
   padding-right: 0;
   border-left: 1px solid var(--markprompt-border);
@@ -909,7 +909,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 :where(.MarkpromptSearchResultLink) {
   display: block;
   border-radius: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.75rem 1rem;
   background-color: var(--markprompt-muted);
 }
 
@@ -928,7 +928,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 :where(.MarkpromptSearchResultIconWrapper) {
   display: flex;
   flex: none;
-  padding: 4px;
+  padding: 5px;
   border-width: 1px;
   border-style: solid;
   border-color: transparent;
@@ -943,7 +943,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
 :where([aria-selected='true'] .MarkpromptSearchResultIconWrapperBordered) {
   background-color: transparent;
-  border-color: var(--markprompt-primaryBorder);
+  border-color: var(--markprompt-primaryMuted);
 }
 
 :where(.MarkpromptSearchResultIcon) {
@@ -962,7 +962,7 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   flex-grow: 1;
   font-size: var(--markprompt-text-size);
   flex-direction: column;
-  gap: 2px;
+  gap: 0.25rem;
   overflow: hidden;
 }
 
@@ -973,12 +973,34 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   max-width: 100%;
 }
 
+:where(.MarkpromptSearchResultTag) {
+  width: min-content;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+  background-color: #fff;
+  border-radius: 9999px;
+  padding: 1px 8px;
+  font-size: calc(var(--markprompt-text-size) * 0.85);
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultTag) {
+  background-color: var(--markprompt-primaryMuted);
+  border-color: var(--markprompt-primaryMuted);
+}
+
 :where(.MarkpromptMatch) {
   font-weight: 600;
   color: var(--markprompt-primary);
   border-bottom-color: var(--markprompt-primary);
   border-bottom-width: 0.1rem;
   border-bottom-style: solid;
+}
+
+[aria-selected='true'] .MarkpromptSearchResultTag .MarkpromptMatch,
+:where(.MarkpromptSearchResultTag .MarkpromptMatch) {
+  border-bottom-color: transparent;
 }
 
 :where([aria-selected='true'] .MarkpromptMatch) {
