--- a/examples/with-next/pages/global.css
+++ b/examples/with-next/pages/global.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
+  color: hsl(0deg 0% 4%);
   background-color: #fff;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -13,9 +13,9 @@
 
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
-  --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #737373;
-  --markprompt-border: #e5e5e5;
+  --markprompt-muted: hsl(0deg 0% 98%);
+  --markprompt-mutedForeground: #808080;
+  --markprompt-border: hsl(0deg 0% 92%);
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -25,8 +25,8 @@
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
-  --markprompt-ring: #0ea5e9;
-  --markprompt-radius: 8px;
+  --markprompt-ring: #b4b6f8;
+  --markprompt-radius: 0.75rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
   --markprompt-button-icon-size: 1rem;
@@ -49,7 +49,7 @@
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #fff;
+    --markprompt-ring: #b4b6f8;
   }
 }
 
@@ -63,20 +63,12 @@ html {
   box-sizing: inherit;
 }
 
+*:not(pre, code, pre *, code *) {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 body {
   margin: 0;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
   font-weight: 400;
   line-height: 1.6;
   min-height: 100vh;
@@ -87,4 +79,54 @@ body,
 #__next {
   min-height: 100vh;
   min-height: 100dvh;
+}
+
+#search {
+  cursor: pointer;
+  display: flex;
+  gap: 8px;
+  border-radius: 8px;
+  padding: 8px 8px 8px 12px;
+  align-items: center;
+  min-width: 400px;
+  font-size: 14px;
+  color: hsl(0deg 0% 50%);
+  background-color: var(--markprompt-muted);
+  border: 1px solid hsl(0deg 0% 92%);
+  transition-property: all;
+  transition-duration: 200ms;
+}
+
+#search:hover {
+  background-color: hsl(0deg 0% 96%);
+  border: 1px solid hsl(0deg 0% 90%);
+}
+
+#search > span {
+  flex-grow: 1;
+  overflow: hidden;
+  text-align: left;
+  font-size: 0.875rem;
+}
+
+#search svg,
+#search kbd {
+  flex: none;
+}
+
+#search svg {
+  width: 16px;
+  height: 16px;
+  stroke-width: 2px;
+  color: hsl(0deg 0% 30%);
+}
+
+#search kbd {
+  color: hsl(0deg 0% 30%);
+  border: 1px solid var(--markprompt-border);
+  background-color: hsl(0deg 0% 99%);
+  padding: 3px 6px;
+  font-size: 0.75rem;
+  border-radius: 5px;
+  font-family: unset;
 }
