--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2,8 +2,9 @@
   --markprompt-background: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
-  --markprompt-mutedForeground: #737373;
+  --markprompt-mutedForeground: #888;
   --markprompt-border: #e5e5e5;
+  --markprompt-border-accent: #cdcdcd;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -13,11 +14,12 @@
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
-  --markprompt-ring: #0ea5e9;
-  --markprompt-radius: 8px;
+  --markprompt-ring: #b4b6f8;
+  --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
   --markprompt-text-size: 0.875rem;
   --markprompt-text-size-xs: 0.75rem;
+  --markprompt-text-size-code: 88%;
   --markprompt-button-icon-size: 1rem;
   --markprompt-icon-stroke-width: 2px;
   --markprompt-shadow: 0 1px 2px 0 #0000000d;
@@ -35,6 +37,7 @@
     --markprompt-muted: #171717;
     --markprompt-mutedForeground: #808080;
     --markprompt-border: #262626;
+    --markprompt-border-accent: #444;
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #fff;
@@ -44,7 +47,7 @@
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #fff;
+    --markprompt-ring: #b4b6f8;
     --markprompt-error-background: #450a0a;
     --markprompt-error-foreground: #fecaca;
   }
@@ -154,8 +157,12 @@
 :where(.MarkpromptOverlay) {
   position: fixed;
   inset: 0;
-  animation: markprompt-fade-in 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  animation: markprompt-fade-in 500ms cubic-bezier(0.16, 1, 0.3, 1);
   background-color: var(--markprompt-overlay);
+}
+
+:where(.MarkpromptOverlay[data-state='closed']) {
+  animation: markprompt-fade-out 500ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 :where(.MarkpromptContentDialog) {
@@ -167,13 +174,20 @@
   width: 100dvw;
   height: 100dvh;
   animation-name: markprompt-show-content;
-  animation-duration: 300ms;
+  animation-duration: 200ms;
   animation-fill-mode: both;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
   color: var(--markprompt-foreground);
   overflow: hidden;
   display: grid;
   grid-template-rows: 1fr auto;
+}
+
+:where(.MarkpromptContentDialog[data-state='closed']) {
+  animation-name: markprompt-hide-content;
+  animation-duration: 100ms;
+  animation-fill-mode: both;
+  transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
 }
 
 @media screen and (pointer: fine) {
@@ -183,8 +197,8 @@
     box-shadow:
       hsl(206deg 22% 7% / 35%) 0 10px 38px -10px,
       hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
-    max-width: 37.5rem;
-    max-height: 37.5rem;
+    max-width: 44rem;
+    max-height: 40rem;
     outline: 2px solid transparent;
     outline-offset: 2px;
   }
@@ -279,11 +293,20 @@
   border-right: 1px solid var(--markprompt-border);
 }
 
+:where(.MarkpromptChatViewNavigation) {
+  padding: 0.75rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: 1px solid var(--markprompt-border);
+  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 3%);
+}
+
 :where(.MarkpromptChatViewChat) {
   overflow: hidden;
   display: grid;
-  grid-template-rows: 1fr auto;
-  grid-column: span 2;
+  grid-template-rows: auto 1fr auto;
+  grid-column: span 3;
 }
 
 @container (width > 50rem) {
@@ -361,16 +384,16 @@
 }
 
 :where(.MarkpromptClose) {
-  color: var(--markprompt-mutedForeground);
+  color: var(--markprompt-foreground);
   background-color: var(--markprompt-muted);
-  padding: 0.25rem;
+  padding: 0.125rem 0.375rem;
   border-style: solid;
   border-width: 1px;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
   border-color: var(--markprompt-border);
-  text-transform: uppercase;
   cursor: pointer;
   display: grid;
+  font-weight: 600;
   place-items: center;
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -378,8 +401,7 @@
 }
 
 :where(.MarkpromptClose:hover) {
-  opacity: 0.9;
-  color: var(--markprompt-foreground);
+  opacity: 0.8;
 }
 
 :where(.MarkpromptClose:focus) {
@@ -388,8 +410,7 @@
 
 :where(.MarkpromptClose kbd) {
   font-weight: 600;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 0.5rem;
+  font-size: 0.675rem;
 }
 
 :where(.MarkpromptForm) {
@@ -402,31 +423,42 @@
   position: relative;
   flex-direction: column-reverse;
   align-items: stretch;
+  padding: 1rem;
+  border-top: 1px solid var(--markprompt-border);
+  box-shadow: 0 -7px 10px -1px rgb(0 0 0 / 3%);
 }
 
 :where(.MarkpromptPromptWrapper) {
   display: flex;
   align-items: center;
-  gap: 0.75rem;
-  padding: 0 0.75rem;
+  gap: 0.5rem;
 }
 
 :where(.MarkpromptChatView .MarkpromptPromptWrapper) {
-  border-top: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-muted);
+  border: 1px solid var(--markprompt-border);
+  border-radius: calc(var(--markprompt-radius) * 0.5);
+  transition-property: all;
+  transition-duration: 150ms;
 }
 
-:where(.MarkpromptPromptView .MarkpromptPromptWrapper),
 :where(.MarkpromptSearchView .MarkpromptPromptWrapper) {
   border-bottom: 1px solid var(--markprompt-border);
+  box-shadow: 0 7px 10px -1px rgb(0 0 0 / 3%);
+  padding: 2px 0.5rem 1px 0.875rem;
+}
+
+:where(.MarkpromptChatView .MarkpromptPromptWrapper):focus-within {
+  box-shadow: 0 0 0 3px var(--markprompt-border);
+  border-color: var(--markprompt-border-accent);
 }
 
 :where(.MarkpromptMessageAnswerContainer) {
   max-width: 100%;
-  padding: 0.5rem 0 3.75rem;
-}
-
-:where(.MarkpromptMessageAnswerContainer:has(+ .MarkpromptReferences)) {
-  padding: 0.5rem 0;
+  display: flex;
+  flex-direction: row;
+  padding-inline: 1.5rem;
+  gap: 1rem;
 }
 
 :where(.MarkpromptMessageAnswer) {
@@ -474,16 +506,38 @@
   border-bottom: 1px solid var(--markprompt-border);
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: flex-start;
 }
 
 :where(.MarkpromptMessage:has(+ .MarkpromptMessage) .MarkpromptMessagePrompt) {
   border-top: 1px solid var(--markprompt-border);
 }
 
+:where(.MarkpromptMessage:has(+ .MarkpromptMessageAnswer)) {
+  margin-bottom: 3rem;
+}
+
 :where(.MarkpromptMessagePromptText) {
   font-size: var(--markprompt-text-size);
   color: var(--markprompt-foreground);
   font-weight: 400;
+  flex: grow;
+}
+
+:where(.MarkpromptMessageAvatar) {
+  color: var(--markprompt-foreground);
+  width: 24px;
+  height: 24px;
+  flex: none;
+  margin-top: 14px;
+  overflow: hidden;
+}
+
+:where(.MarkpromptMessageAvatarImage) {
+  border-radius: 9999px;
 }
 
 :where(.MarkpromptPrimaryIcon) {
@@ -507,6 +561,13 @@
   stroke-width: var(--markprompt-icon-stroke-width);
 }
 
+:where(.MarkpromptSearchIconAccented) {
+  color: var(--markprompt-foreground);
+  width: 16px;
+  height: 16px;
+  stroke-width: 2.5px;
+}
+
 :where(.MarkpromptTitle) {
   margin-block-start: 0;
 }
@@ -514,25 +575,77 @@
 :where(.MarkpromptPrompt) {
   border: none;
   width: 100%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 
   /*
     If the font-size of the prompt input is not at least 1rem (16px), Safari
     on iOS will automatically zoom to the prompt input
   */
   font-size: 1rem;
-  background-color: var(--markprompt-background);
   color: var(--markprompt-foreground);
   caret-color: var(--markprompt-primary);
+  background-color: transparent;
+  padding: 1rem 0.75rem;
 }
 
-:where(.MarkpromptPrompt::placeholder) {
+@media screen and (width >= 1024px) {
+  :where(.MarkpromptPrompt) {
+    font-size: var(--markprompt-text-size);
+  }
+}
+
+:where(.MarkpromptPrompt)::placeholder {
   color: var(--markprompt-mutedForeground);
 }
 
 :where(.MarkpromptPrompt:focus) {
   outline: none;
+}
+
+:where(.MarkpromptPromptSubmitButton) {
+  padding: 0.375rem 0.75rem;
+  outline: none;
+  color: var(--markprompt-background);
+  background-color: var(--markprompt-primary);
+  border-radius: calc(var(--markprompt-radius) * 0.5);
+  font-size: var(--markprompt-text-size);
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  border: 1px solid transparent;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+:where(.MarkpromptViews) button:focus-visible,
+:where(.MarkpromptViews) a:focus-visible {
+  outline: none;
+  box-shadow: 0 0 0 3px var(--markprompt-ring);
+  transition-property: all;
+  transition-duration: 200ms;
+}
+
+:where(.MarkpromptPromptWrapper) button:disabled {
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  color: var(--markprompt-border-accent);
+}
+
+:where(.MarkpromptPromptWrapper) button:hover:not(:disabled) {
+  opacity: 0.8;
+}
+
+:where(.MarkpromptPromptWrapper) button svg {
+  width: 18px;
+  height: 18px;
+  stroke-width: 2px;
+}
+
+:where(.MarkpromptPromptWrapper) button div {
+  width: 18px;
+  height: 18px;
+  position: relative;
 }
 
 /* Remove 2px padding that some browsers add to input */
@@ -578,6 +691,8 @@
   scroll-behavior: smooth;
   scrollbar-width: none;
   overflow: hidden auto;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 :where(.MarkpromptAutoScroller::-webkit-scrollbar) {
@@ -589,14 +704,6 @@
   font-size: 0.875rem;
   font-size: var(--markprompt-text-size);
   line-height: 1.7142857;
-}
-
-:where(.MarkpromptPromptView .MarkpromptAnswer) {
-  padding: 1rem 2rem;
-}
-
-:where(.MarkpromptChatView .MarkpromptAnswer) {
-  padding: 0 2rem 1rem;
 }
 
 :where(.MarkpromptAnswer p) {
@@ -779,15 +886,19 @@
 
 :where(.MarkpromptAnswer figcaption) {
   color: var(--markprompt-mutedForeground);
-  font-size: 0.8571429em;
+  font-size: var(--markprompt-text-size);
   line-height: 1.3333333;
   margin-top: 0.6666667em;
 }
 
 :where(.MarkpromptAnswer code) {
   color: var(--markprompt-foreground);
-  font-weight: 600;
-  font-size: 0.8571429em;
+  border: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-secondary);
+  font-size: var(--markprompt-text-size-code);
+  padding: 0.125rem 0.25rem;
+  border-radius: 4px;
+  font-weight: 500;
 }
 
 :where(.MarkpromptAnswer code::before) {
@@ -808,12 +919,12 @@
 
 :where(.MarkpromptAnswer h2 code) {
   color: inherit;
-  font-size: 0.9em;
+  font-size: var(--markprompt-text-size-code);
 }
 
 :where(.MarkpromptAnswer h3 code) {
   color: inherit;
-  font-size: 0.8888889em;
+  font-size: var(--markprompt-text-size-code);
 }
 
 :where(.MarkpromptAnswer h4 code) {
@@ -834,12 +945,13 @@
   border: 1px solid var(--markprompt-border);
   overflow-x: auto;
   font-weight: 400;
-  font-size: 0.8571429em;
+  font-family: monospace;
+  font-size: var(--markprompt-text-size-code);
   line-height: 1.6666667;
-  margin-top: 1.6666667em;
-  margin-bottom: 1.6666667em;
-  border-radius: 0.25rem;
-  padding: 0.6666667em 1em;
+  border-radius: var(--markprompt-button-radius);
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
 }
 
 :where(.MarkpromptAnswer pre code) {
@@ -867,7 +979,7 @@
   text-align: left;
   margin-top: 2em;
   margin-bottom: 2em;
-  font-size: 0.8571429em;
+  font-size: var(--markprompt-text-size);
   line-height: 1.5;
 }
 
@@ -998,10 +1110,6 @@
   padding-right: 0;
 }
 
-:where(.MarkpromptMessageAnswer .MarkpromptAnswer) {
-  padding: 0 1.5rem;
-}
-
 :where(.MarkpromptCaret) {
   display: none;
   height: 1em;
@@ -1030,7 +1138,7 @@
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='icons']) {
-  padding: 0 1.5rem 0.75rem;
+  margin-top: -0.25rem;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
@@ -1063,57 +1171,63 @@
   justify-content: flex-end;
 }
 
-:where(.MarkpromptPromptFeedback button),
-:where(.MarkpromptCopyButton) {
+:where(.MarkpromptPromptFeedback svg) {
+  transition-property: all;
+  transition-duration: 200ms;
+  stroke-width: 2.2px;
+}
+
+:where(.MarkpromptGhostThumbButton) {
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0.375rem;
   border-radius: 0.375rem;
-  animation-name: markprompt-slide-up;
-  animation-duration: 1s;
-  animation-fill-mode: backwards;
-  transition-timing-function: ease-in-out;
   color: var(--markprompt-mutedForeground);
   background-color: transparent;
-}
-
-:where(.MarkpromptPromptFeedback[data-variant='icons'] button) {
-  border: 0;
+  border: none;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] button) {
   border: 1px solid var(--markprompt-border);
 }
 
-:where(.MarkpromptPromptFeedback button[data-active='true']) {
+:where(.MarkpromptGhostThumbButton[data-active='true']) {
   background-color: var(--markprompt-primary);
   color: var(--markprompt-primaryForeground);
   border-color: var(--markprompt-primaryForeground);
 }
 
-.MarkpromptPromptFeedback button[data-active='true']:hover {
+.MarkpromptGhostThumbButton[data-active='true']:hover {
   background-color: var(--markprompt-primary);
 }
 
-:where(.MarkpromptPromptFeedback button svg) {
+:where(.MarkpromptGhostThumbButton svg) {
   display: block;
 }
 
-.MarkpromptPromptFeedback button:hover {
+.MarkpromptGhostThumbButton:hover {
   background-color: var(--markprompt-muted);
 }
 
-:where(.MarkpromptCopyButton) {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  border: 0;
+:where(.MarkpromptGhostButton) {
+  color: var(--markprompt-foreground);
+  border: none;
+  display: flex;
+  place-items: center;
+  outline: none;
+  background: transparent;
+  border-radius: var(--markprompt-button-radius);
+  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
+  transition-property: all;
+  transition-duration: 200ms;
+  padding: 0.375rem;
+  cursor: pointer;
 }
 
-:where(.MarkpromptCopyButton):hover {
-  opacity: 0.8;
+:where(.MarkpromptGhostButton):hover {
+  background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptProgress) {
@@ -1147,10 +1261,9 @@
 
 :where(.MarkpromptReferences) {
   position: relative;
-  padding-block: 1rem 0.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
-  font-size: 0.875rem;
+  font-size: var(--markprompt-text-size-xs);
   color: var(--markprompt-mutedForeground);
   overflow: hidden;
   flex: 0 0 auto;
@@ -1173,8 +1286,11 @@
   padding-block-end: 1.5rem;
 }
 
+:where(.MarkpromptMessage:has(.MarkpromptMessageAnswerContainer)) {
+  padding-bottom: 2rem;
+}
+
 :where(.MarkpromptPromptView .MarkpromptReferences p) {
-  padding-inline: 2rem;
   margin-top: 0;
 }
 
@@ -1183,15 +1299,10 @@
 }
 
 :where(.MarkpromptChatView .MarkpromptReferences p) {
-  animation: markprompt-fade-in 500ms ease-out forwards 1;
-  font-weight: 600;
+  animation: markprompt-fade-in 300ms ease-out forwards 1;
   margin: 0;
   margin-bottom: 0.5rem;
-  padding-inline: 2rem;
-}
-
-.MarkpromptChatView .MarkpromptReferences p {
-  padding-inline: 1.5rem;
+  padding-inline: 4rem 1rem;
 }
 
 :where(.MarkpromptReferences ul) {
@@ -1218,7 +1329,7 @@
 
 :where(.MarkpromptChatView .MarkpromptReferences ul) {
   background-color: unset;
-  padding: 0.25rem 1.5rem 0.5rem;
+  padding: 0.25rem 1rem 0.5rem 4rem;
 }
 
 .MarkpromptReferences ul::-webkit-scrollbar {
@@ -1275,10 +1386,6 @@
 :where(.MarkpromptReference) {
   font-size: 0.875rem;
   line-height: 1.5rem;
-  animation-name: markprompt-slide-up;
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  transition-timing-function: ease-in-out;
 }
 
 :where(.MarkpromptReference a) {
@@ -1503,6 +1610,14 @@
   overflow: hidden;
 }
 
+:where(.MarkpromptSearchResultSectionHeading) {
+  padding: 0 8px;
+  font-size: var(--markprompt-text-size-xs);
+  margin-top: 1rem;
+  margin-bottom: 0.25rem;
+  color: var(--markprompt-mutedForeground);
+}
+
 :where(.MarkpromptSearchResultHeading) {
   width: min-content;
   overflow: hidden;
@@ -1530,6 +1645,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 100%;
+}
+
+:where(.MarkpromptSearchResultTitleAccent) {
+  font-weight: 600;
 }
 
 :where(.MarkpromptSearchResultSubtitle) {
@@ -1563,17 +1682,14 @@
 }
 
 :where(.MarkpromptNoSearchResults) {
-  font-size: var(--markprompt-text-size);
+  font-size: var(--markprompt-text-size-xs);
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex: 1 1 auto;
 }
 
 :where(.MarkpromptNoSearchResults p) {
   color: var(--markprompt-mutedForeground);
-  padding: 2rem;
-  text-align: center;
+  padding: 0 1rem 0 0.5rem;
 }
 
 :where(.MarkpromptNoSearchResults span) {
@@ -1603,17 +1719,17 @@
 
 :where(.MarkpromptSelectToggle) {
   all: unset;
-  padding: 0.5rem;
+  padding: 0.375rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: all;
+  transition-duration: 200ms;
   background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
   border-radius: 0.375rem;
-  color: var(--markprompt-mutedForeground);
+  color: var(--markprompt-foreground);
   cursor: pointer;
-  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
-    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
 }
 
 :where(.MarkpromptSelectToggle:hover) {
@@ -1633,10 +1749,16 @@
   box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
     var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
   max-width: 30ch;
+  overflow: hidden;
 }
 
 :where(.MarkpromptSelectMenu[data-open='true']) {
   display: block;
+  animation: markprompt-fade-in 500ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+:where(.MarkpromptSelectMenu[data-open='false']) {
+  animation: markprompt-fade-out 500ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 :where(.MarkpromptSelectMenu li) {
@@ -1769,16 +1891,14 @@
 }
 
 :where(.MarkpromptError) {
-  padding-block: 1rem;
-  padding-inline: 2rem;
-  background-color: var(--markprompt-muted);
+  padding: 0.375rem 4rem;
   color: var(--markprompt-mutedForeground);
 }
 
 :where(.MarkpromptDefaultError) {
   display: flex;
   flex-direction: column;
-  font-size: 1rem;
+  font-size: var(--markprompt-text-size);
   text-wrap: balance;
 }
 
@@ -1793,19 +1913,40 @@
   font-size: var(--markprompt-text-size);
 }
 
+.MarkpromptAnswer .hljs {
+  background: transparent;
+  color: var(--markprompt-foreground);
+}
+
+.MarkpromptAnswer code.hljs {
+  padding: 0;
+}
+
+.MarkpromptAnimateSpin {
+  animation: markprompt-spin 1s linear infinite;
+}
+
 @keyframes markprompt-show-content {
   0% {
     opacity: 0;
-    transform: translate(-50%, -46%) scale(0.98);
-  }
-
-  50% {
-    transform: translate(-50%, -51%) scale(1.02);
+    transform: translate(-50%, -50%) scale(0.94);
   }
 
   100% {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes markprompt-hide-content {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.98);
   }
 }
 
